<resources>
    <string name="app_name">My Applicationj9</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="details">Details</string>
    <string name="caption">here, is the caption</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="have_problem">I have a problem with: </string>
    <string name="feedback">Feedback</string>
    <string name="cities">Cities</string>
    <string name="map">Map</string>
    <string name="nearest_cities">Nearest Cities</string>
    <string name="type_of_tourism">type_of_tourism</string>
    <string name="enjoy_egypt">Enjoy Egypt</string>
    <string name="take_me">Take me there</string>
    <string name="preview">Previews</string>
    <string name="sights">Sights</string>
    <string name="contents">Contents</string>
    <string name="comment">Comment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="items_type">
        <item>Religious</item>
        <item>Cultural</item>
        <item>Adventure</item>
        <item>Medical</item>
        <item>Recreational</item>
    </string-array>

</resources>
